--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-native": "0.49.5",
 		"react-native-elements": "^0.17.0",
 		"react-native-fetch-blob": "^0.10.8",
+		"react-native-google-places": "^2.4.2",
 		"react-native-image-crop-picker": "^0.18.1",
 		"react-native-modal-datetime-picker": "^4.13.0",
 		"react-native-modalbox": "^1.4.2",
