--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-maps')
+    compile project(':react-native-google-places')
     compile project(':react-native-vector-icons')
     compile project(':react-native-navigation')
     compile project(':react-native-splash-screen')
