--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-native-fetch-blob": "^0.10.8",
 		"react-native-google-places": "^2.4.2",
 		"react-native-image-crop-picker": "^0.18.1",
+		"react-native-maps": "^0.17.1",
 		"react-native-modal-datetime-picker": "^4.13.0",
 		"react-native-modalbox": "^1.4.2",
 		"react-native-navigation": "^1.1.255",
